--- a/SmogApp/Info.plist
+++ b/SmogApp/Info.plist
@@ -30,6 +30,11 @@
 	<array>
 		<string>armv7</string>
 	</array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>googlechromes</string>
+        <string>comgooglemaps</string>
+    </array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
